--- a/schedule/templates/schedule/register.html
+++ b/schedule/templates/schedule/register.html
@@ -6,8 +6,9 @@
 <body>
 <form method="post">
 	{% csrf_token %}
-	{{ form.as_p }}
-	<button type="submit"> REGISTER </button>
+	{{ user_form.as_p }}
+	{{ profile_form.as_p }}
+	<input type="submit" value="Register">
 </form>
 </body>
 </html>
