--- a/backend/schedule/templates/schedule/profile.html
+++ b/backend/schedule/templates/schedule/profile.html
@@ -7,7 +7,30 @@
 <h2>hello <br>
 {{ user.username }}<br>
 <h4>WELCOME  to IMG scheduling app</h4>
-
+<br>
+<br>
 </h2>
+<!-- <input type="radio" id ="room-name-input" value="one">one<br> -->
+<input type="text" id="name-logged" value={{ user  }} /><br>
+<input type="text" id="room-name-input"/><br>
+<input type="text" id="room-name-submit" type="button" value="enter"/>
+<script>
+	document.querySelector('#room-name-input').focus();
+	document.querySelector('#room-name-submit').onkeyup = function(e) {
+        if (e.keyCode === 13) {
+        	document.querySelector('#room-name-submit').click();
+        }   
+
+	};
+    
+    document.querySelector('#room-name-submit').onclick = function(e) {
+    	var roomName = document.querySelector('#room-name-input').value;
+    	var name = document.querySelector('#name-logged').value;
+    	console.log(name);
+    	window.location.pathname = '/schedule/' + roomName + '/' + name +'/';
+    };
+
+
+</script>
 </body>
 </html>
