--- a/backend/schedule/templates/schedule/room.html
+++ b/backend/schedule/templates/schedule/room.html
@@ -11,17 +11,14 @@
 
 <script type="text/javascript">
     var roomName = {{ room_name_json }};
-    var name = {{ name_json }};
-    // var name = {{ name_json }};
     var CommentSocket = new WebSocket(
         'ws://' + window.location.host +
-        '/ws/schedule/' + roomName + '/' + name + '/');
+        '/ws/schedule/' + roomName +  '/');
 
     CommentSocket.onmessage = function(e) {
         var data = JSON.parse(e.data);
         var message = data['message'];
         document.querySelector('#comment-log').value += (message + '\n');
-        // return false;
     };
 
     CommentSocket.onclose = function(e) {
@@ -30,7 +27,7 @@
 
     document.querySelector('#comment-message-input').focus();
     document.querySelector('#comment-message-input').onkeyup = function(e) {
-        if (e.keyCode === 13) {  // enter, return
+        if (e.keyCode === 13) {  
             document.querySelector('#comment-message-submit').click();
         }
     };
